Detalhes nas páginas das categorias e na Index.html

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -47,42 +47,44 @@
         <!--Início navbar-->
         <nav class="navbar navbar-expand-lg bg-primary mb-3">
             <div class="container-fluid">
+                <h3>
                     <i class="bi bi-book-half icones"></i>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item rounded-3 mx-3 navButtons">
-                                <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown me-3 rounded-3 navButtons">
-                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Categorias
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
-                                    <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
-                                    <li><a class="dropdown-item" href="romance.html">Romance</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item rounded-3 me-3 navButtons">
-                                <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
-                            </li>
-                            <li class="nav-item dropdown rounded-3 me-3 navButtons">
-                                <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Plataformas
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                            <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
-                        </form>
-                    </div>
+                </h3>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item rounded-3 mx-3 navButtons">
+                            <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
+                        </li>
+                        <li class="nav-item dropdown me-3 rounded-3 navButtons">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Categorias
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
+                                <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
+                                <li><a class="dropdown-item" href="romance.html">Romance</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item rounded-3 me-3 navButtons">
+                            <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
+                        </li>
+                        <li class="nav-item dropdown rounded-3 me-3 navButtons">
+                            <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Plataformas
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                        <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
+                    </form>
+                </div>
             </div>
         </nav>
         <!--Fim navbar-->
@@ -169,18 +171,22 @@
         <!-- Início Container Ação -->
         <div class="container cont-Bv rounded-3 mb-3">
             <div class="row">
-                <div class="col">
-                    <h1 class="text-left">Ação e Aventura</h1>
+                <div class="col m-3">
+                    <h1 class="text-left">
+                        <i class="bi bi-map"></i>
+                        Ação e Aventura
+                    </h1>
                 </div>
-                <div class="col">
+                <div class="col m-3">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
                       <a href="acao.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
                     </div>
                 </div>
                 <hr>
             </div>
+
             <div class="card-group">
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="acao.html#jjk" class="text-center p-1">
                         <img src="Imagens/acao/jjk.jpg" class="tamanhoImg card-img">
                     </a>
@@ -188,7 +194,8 @@
                         <p class="card-text text-center">Jujutsu Kaisen</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="acao.html#snv" class="text-center p-1">
                     <img src="Imagens/acao/snv.jpg" class="tamanhoImg card-img">
                     </a>
@@ -196,7 +203,8 @@
                     <p class="card-text text-center">Shuumatsu no Walkyrie</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="acao.html#cm" class="text-center p-1">
                     <img src="Imagens/acao/cm.jpg" class="tamanhoImg card-img">
                     </a>
@@ -204,7 +212,8 @@
                     <p class="card-text text-center">Chainsaw Man</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="acao.html#opm" class="text-center p-1">
                     <img src="Imagens/acao/opm.jpg" class="tamanhoImg card-img">
                     </a>
@@ -219,10 +228,13 @@
         <!-- Início countainer Esporte -->
         <div class="container cont-Bv rounded-3 mb-3">
             <div class="row">
-                <div class="col">
-                    <h1 class="text-left">Esporte</h1>
+                <div class="col m-3">
+                    <h1 class="text-left">
+                        <i class="bi bi-bicycle"></i>
+                        Esporte
+                    </h1>
                 </div>
-                <div class="col">
+                <div class="col m-3">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
                       <a href="esporte.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
                     </div>
@@ -230,7 +242,7 @@
                 <hr>
             </div>
             <div class="card-group">
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="esporte.html#hni" class="text-center p-1">
                     <img src="Imagens/esporte/hni.jpg" class="tamanhoImg card-img">
                     </a>
@@ -238,7 +250,7 @@
                     <p class="card-text text-center">Hajime no Ippo</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="esporte.html#bl" class="text-center p-1">
                     <img src="Imagens/esporte/bl.jpg" class="tamanhoImg card-img">
                     </a>
@@ -246,7 +258,7 @@
                     <p class="card-text text-center">Blue Lock</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="esporte.html#h" class="text-center p-1">
                     <img src="Imagens/esporte/h.jpg" class="tamanhoImg card-img">
                     </a>
@@ -254,7 +266,7 @@
                     <p class="card-text text-center">Haikyuu</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="esporte.html#r" class="text-center p-1">
                     <img src="Imagens/esporte/r.jpg" class="tamanhoImg card-img">
                     </a>
@@ -269,10 +281,13 @@
         <!-- Início countainer Romance -->
         <div class="container cont-Bv rounded-3 mb-3">
             <div class="row">
-                <div class="col">
-                    <h1 class="text-left">Romance</h1>
+                <div class="col m-3">
+                    <h1 class="text-left">
+                        <i class="bi bi-hearts"></i>
+                        Romance
+                    </h1>
                 </div>
-                <div class="col">
+                <div class="col m-3">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end btnClasse">
                       <a href="romance.html"><button class="btn btn-primary" type="button">Ver Todos</button></a>
                     </div>
@@ -280,7 +295,7 @@
                 <hr>
             </div>
             <div class="card-group">
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="romance.html#na" class="text-center p-1">
                     <img src="Imagens/romance/na.jpg" class="tamanhoImg card-img">
                     </a>
@@ -288,7 +303,7 @@
                     <p class="card-text text-center">Nagatoro</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="romance.html#ks" class="text-center p-1">
                     <img src="Imagens/romance/ks.jpg" class="tamanhoImg card-img">
                     </a>
@@ -296,7 +311,7 @@
                     <p class="card-text text-center">Kaguya-Sama</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="romance.html#uc" class="text-center p-1">
                     <img src="Imagens/romance/uc.jpg" class="tamanhoImg card-img">
                     </a>
@@ -304,7 +319,7 @@
                     <p class="card-text text-center">Uzaki-Chan</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-12 card border-light m-3">
+                <div class="col-md-3 col-sm-12 card border-light m-3 rounded-4">
                     <a href="romance.html#kcc" class="text-center p-1">
                     <img src="Imagens/romance/kcc.jpg" class="tamanhoImg card-img">
                     </a>
