--- a/romance.html
+++ b/romance.html
@@ -65,85 +65,96 @@
 <body>
 
     <!--Início navbar-->
-        <nav class="navbar navbar-expand-lg bg-primary mb-3">
-            <div class="container-fluid">
-                    <i class="bi bi-book-half icones"></i>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item rounded-3 mx-3 navButtons">
-                                <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown me-3 rounded-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Categorias
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
-                                    <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
-                                    <li><a class="dropdown-item" href="romance.html">Romance</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item rounded-3 me-3 navButtons">
-                                <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
-                            </li>
-                            <li class="nav-item dropdown rounded-3 me-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Plataformas
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
-                                </ul>
-                            </li>
+    <nav class="navbar navbar-expand-lg bg-primary mb-3">
+        <div class="container-fluid">
+            <h3>
+                <i class="bi bi-book-half icones"></i>            
+            </h3>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item rounded-3 mx-3 navButtons">
+                        <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown me-3 rounded-3 navButtons">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Categorias
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
+                            <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
+                            <li><a class="dropdown-item" href="romance.html">Romance</a></li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                            <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
-                        </form>
-                    </div>
+                    </li>
+                    <li class="nav-item rounded-3 me-3 navButtons">
+                        <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
+                    </li>
+                    <li class="nav-item dropdown rounded-3 me-3 navButtons">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Plataformas
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
+                </form>
             </div>
-        </nav>
-        <!--Fim navbar-->
+        </div>
+    </nav>
+    <!--Fim navbar-->
 
-        <!-- Inicio container ListGroup-->
-
-        <div class="container cont-Bv rounded-3 mb-3">
-          <div class="accordion accordion-flush" id="accordionFlushExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-        <h1>Âncoras</h1>
-      </button>
-    </h2>
-    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-      <div class="accordion-body"> <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="#ahr">Ao Haru Ride</a></li>
-              <li class="list-group-item"><a href="#gotobun">Go-Tōbun no Hanayome</a></li>
-              <li class="list-group-item"><a href="#horimiya">Horimiya</a></li>
-              <li class="list-group-item"><a href="#ks">Kaguyas-Sama</a></li>
-              <li class="list-group-item"><a href="#ko">Kanojo, Okarishimasu</a></li>
-              <li class="list-group-item"><a href="#kcc">Komi-San</a></li>
-              <li class="list-group-item"><a href="#na">Nagatoro</a></li>
-              <li class="list-group-item"><a href="#no">Noragami</a></li>
-              <li class="list-group-item"><a href="#uc">Uzaki-Chan</a></li>
-              <li class="list-group-item"><a href="#w">Wotakoi</a></li>
-            </ul>
+    <!-- Inicio Container + Scrollspy + ListGroup + Accordion-->
+    <div class="container cont-Bv rounded-3 mb-3 p-3">
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <h1 class="my-3">
+                            <i class="bi bi-link-45deg"></i>
+                            Âncoras
+                        </h1>
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><a href="#ahr">Ao Haru Ride</a></li>
+                            <li class="list-group-item"><a href="#gotobun">Go-Tōbun no Hanayome</a></li>
+                            <li class="list-group-item"><a href="#horimiya">Horimiya</a></li>
+                            <li class="list-group-item"><a href="#ks">Kaguyas-Sama</a></li>
+                            <li class="list-group-item"><a href="#ko">Kanojo, Okarishimasu</a></li>
+                            <li class="list-group-item"><a href="#kcc">Komi-San</a></li>
+                            <li class="list-group-item"><a href="#na">Nagatoro</a></li>
+                            <li class="list-group-item"><a href="#no">Noragami</a></li>
+                            <li class="list-group-item"><a href="#uc">Uzaki-Chan</a></li>
+                            <li class="list-group-item"><a href="#w">Wotakoi</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>  
         </div>
     </div>
-  </div>  
-</div>
-</div>
-        <!-- Fim container ListGroup-->
+    <!-- Fim Container + Scollspy + ListGroup + Accordion-->
 
         <!-- Inicio container mangás-->
 
 <div class="container cont-Bv rounded-3 mb-3 p-2">
     <div class="row">
-                <h1>Mangás</h1>
-                <hr class="linha">
-            </div>
+        <div class="col">
+            <h1 class="text-center m-3">
+                <i class="bi bi-book-half"></i>
+                Mangás
+            </h1>
+        </div>
+        <hr class="linha">
+    </div>
+    
             <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
                     <img src="Imagens/romance/ahr.jpg" class="tamanhoImg" alt="Berserk">
