Reparo em características de todas as páginas.

--- a/Index_mangapedia.html
+++ b/Index_mangapedia.html
@@ -13,6 +13,8 @@
         <style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
                 background-size: cover;
             }
             
@@ -126,31 +128,31 @@
                         <div class="carousel-item active">
                             <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Testando</h2>
+                                <h2 class="lead">Testando</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="Imagens/teste2.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Testando2</h2>
+                                <h2 class="lead">Testando2</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Testando3</h2>
+                                <h2 class="lead">Testando3</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="Imagens/teste2.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Testando4</h2>
+                                <h2 class="lead">Testando4</h2>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="Imagens/teste1.jpg" class="d-block w-100" alt="deu erro">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Testando5</h2>
+                                <h2 class="lead">Testando5</h2>
                             </div>
                         </div>
                       </div>
