--- a/acao.html
+++ b/acao.html
@@ -13,6 +13,8 @@
         <style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
                 background-size: cover;
             }
 
