--- a/contato.html
+++ b/contato.html
@@ -12,6 +12,8 @@
 	<style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
                 background-size: cover;
             }
             
@@ -72,6 +74,7 @@
             </div>
         </nav>
         <!--Fim navbar-->
+
 		<!--Inicio container forms -->
         <div class="container cont-Bv">
         	<h1 class="display-6">
