--- a/romance.html
+++ b/romance.html
@@ -12,6 +12,8 @@
     <style type="text/css">
             body{
                 background-image: url("Imagens/bgBodyMangaPedia.jpg");
+                background-attachment: fixed;
+                background-repeat: no-repeat;
                 background-size: cover;
             }
 
