modal adicionado no btn enviar, alerts adicionados em acao.html

--- a/contato.html
+++ b/contato.html
@@ -82,26 +82,46 @@
         	</h1>
         	<p class="lead">Entre em contato conosco:</p>
         	<form class="needs-validation" novalidate>
-        		<div class="row m-2">
-        			<label class="form-label">Nome:</label><br>
+        		<div class="row m-2 form-floating">
                     <input type="text" class="form-control" placeholder="Insira seu nome" required>
+        			<label class="form-label">Nome:</label><br>
                     <div class="invalid-feedback">Campo obrigatório.</div>
         		</div>
-        		<div class="row m-2">
-        			<label class="form-label">Email:</label><br>
+        		<div class="row m-2 form-floating">
                     <input type="email" class="form-control" placeholder="Insira seu email" required>
+        			<label class="form-label">Email:</label><br>
                     <div class="invalid-feedback">Campo obrigatório.</div>
         		</div>
-        		<div class="row m-2">
-                    <label class="form-label">Mensagem:</label>
+        		<div class="row m-2 form-floating">
                     <textarea class="form-control" required></textarea>
+                    <label class="form-label">Mensagem:</label>
                     <div class="invalid-feedback">Campo obrigatório.</div>
                 </div>
                 <div class="row m-1">
-                    <div class="col-12">
-                        <button type="submit" class="btn btn-danger">
-                            <i class="bi bi-send"></i> Enviar
+                    <div class="col-12 m-2">    
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#enviarConfirm">
+                        <i class="bi bi-send"></i> Enviar
                         </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="enviarConfirm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                          <div class="modal-dialog">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Alerta</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                              <div class="modal-body">
+                                Você tem certeza que deseja enviar?
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+                                <button type="submit" class="btn btn-primary">Sim</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                         <button type="submit" class="btn btn-danger">
                             <i class="bi bi-x-circle"></i> Limpar
                         </button>
