--- a/acao.html
+++ b/acao.html
@@ -55,6 +55,7 @@
                 width: 98%;
                 margin-left: 1%;
             }
+
         </style>
     </head>
     <body>
@@ -157,6 +158,9 @@
                     <h4 class="text-left">Berserk</h4><br>
                     <h6>392 Capitulos</h6><br>
                     <p>Gatts é um sobrevivente que vaga pelo mundo à procura de respostas. Antigo membro do ext "Bando dos Falcões", um grupo mercenário de cavaleiros e guerreiros liderado por Griffith e Caska, Gatts se adentra na história que ganha corpo e emerge sob um ponto de vista totalmente imprevisível, a medida que os acontecimentos vão se completando. É uma obra dedicada à eterna luta do Catolicismo contra Paganismo....</p>
+                    <div class="alert alert-danger configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 18
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -169,6 +173,9 @@
                     <h4 class="text-left">Bleach</h4><br>
                     <h6>712 Capitulos</h6><br>
                     <p>A história conta com Kurosaki Ichigo como personagem principal. Após uma série de incidentes ele acaba se tornando um Shinigami, que são responsáveis pelo fluxo de almas do mundo real até a Soul Society, assim como combater os espíritos malígnos, Hollows. Porém, conforme ele começa a se envolver com o mundo espiritual, ele acaba no meio de uma trama que ameaça a existência de ambos os mundos.</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -180,10 +187,14 @@
                 <div class="col-md-6" id="bnh">
                     <h4 class="text-left">Boku no Hero Academia</h4><br>
                     <h6>412 Capitulos</h6><br>
+
                     <p>A série conta a história de Midoriya Izuku, um garoto tímido e fraco cujo sonho é ser um herói. O problema é que ele vive num mundo repleto de pessoas com super poderes, mas ele mesmo não tem poder algum. No entanto, ele não desiste de seu grande sonho e fará de todo o possível para ser o maior herói que o mundo já conheceu!</p>
-                </div>
-                <hr class="linha">
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
+                </div>  
             </div>
+            <hr class="linha">
             
             <div class="row">
                 <div class="col-sm-12 col-md-4  mgImg">
@@ -193,6 +204,9 @@
                     <h4 class="text-left">Chainsaw Man</h4><br>
                     <h6>151 Capitulos</h6><br>
                     <p>Quando seu pai morreu, Denji ficou preso com uma dívida que era incapaz de pagar. Mas graças à ajuda de um cachorro demônio que ele salvou chamado Pochita, Denji é capaz de sobreviver como caçador de demônios de aluguel. Os poderes de serra elétrica do Pochita são bem poderosos contra estes demônios. E então, quando o Denji acaba sendo morto por um demônio, o Pochita desiste de sua vida para revivê-lo. Mas, agora o Denji renasceu como um hibrido de demônio com humano... Agora ele é o "Chainsaw Man"!!!</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -205,6 +219,9 @@
                     <h4 class="text-left">JoJo no Kimyou na Bouken Part 7: Steel Ball Run</h4><br>
                     <h6>98 Capitulos</h6><br>
                     <p>Originalmente apresentado como uma história relacionada, esta série foi mais tarde declarada oficialmente uma parte do enredo JoJo, assim se tornado a parte 7. A série é estrelada por Gyro Zeppeli, que utiliza um conjunto de esferas de aço que giram incrivelmente rápido e Johnny Joestar (Jonathan Joestar), um ex-jóquei hot-shot que foi prejudicado por uma emboscada e perdeu sua fama e fortuna. Eles correm, junto com outros jóqueis, em uma louca corrida através da América por um prêmio de 50 milhões de dólares, que lembra a The Cannonball Run!</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -217,6 +234,9 @@
                     <h4 class="text-left">Jujutsu Kaisen</h4><br>
                     <h6>243 Capitulos</h6><br>
                     <p>Jujutsu Kaisen Yuji é um gênio do atletismo, mas não tem interesse algum em ficar correndo em círculos. Ele é feliz como membro no Clube de Estudo de Fenômenos Psíquicos. Apesar de estar no clube apenas por diversão, tudo fica sério quando um espírito de verdade aparece na escola! A vida está prestes a se tornar muito interessante na Escola Sugisawa...</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -229,6 +249,9 @@
                     <h4 class="text-left">Kimetsu no Yaiba</h4><br>
                     <h6>213 Capitulos</h6><br>
                     <p>O mangá conta a história de Tanjiro, o filho mais velho de uma família que é massacrada por um demônio e, a única sobrevivente do incidente foi umas das suas irmãs, que por causa do massacre acaba se transformando em um demônio. Então, o protagonista, Tanjiro, sai em uma jornada para tentar achar uma ''cura'' para a sua irmã...</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -241,6 +264,9 @@
                     <h4 class="text-left">Naruto</h4><br>
                     <h6>718 Capitulos</h6><br>
                     <p>Naruto Uzumaki é um menino que vive em Konohagakure no Sato ou simplesmente Konoha ou Vila Oculta da Folha, a vila ninja do País do Fogo. Quando ainda bebê, Naruto teve aprisionada em seu corpo a Kyuubi no Youko por Minato Namikaze (quarto Hokage, e seu pai), com a finalidade de salvar a Vila da Folha. Desde então, Naruto é visto por muitas pessoas como um monstro, não só pelos familiares das pessoas mortas pela Kyuubi, mas também por pessoas que não toleram suas brincadeiras, já que o mesmo é extremamente hiperativo, incompreendido e solitário. Naruto sonha em se tornar o Hokage de sua vila, um ninja poderoso e respeitado, para assim poder ser reconhecido por todos.</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -253,6 +279,9 @@
                     <h4 class="text-left">One Punch Man<br>
                     <h6>304 Capitulos</h6><br>
                     <p>Conta o dia-a-dia de um herói normal que está infeliz por ser forte o bastante para derrotar todos os seus oponentes com apenas um soco, já que isso não lhe traz mais a sensação de adrenalina ao enfrentar um inimigo poderoso...</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
                 </div>
                 <hr class="linha">
             </div>
@@ -265,6 +294,10 @@
                     <h4 class="text-left">Shuumatsu no Walkyrie</h4><br>
                     <h6>87 Capitulos</h6><br>
                     <p>A cada 1.000 anos, as divindades se reúnem sob o conselho de Valhalla para decidir sobre o direito da humanidade de continuar vivendo, ou por sua destruição, porém desta vez os deuses estão furiosos com o descaso humano para com o planeta, pendendo passim para aniquilar toda a raça humana, porém uma única valquíria os convencem de realizar o Ragnarok, uma batalha mortal entre humanos e deuses para decidir sob sua sobrevivência, 13 humanos enfrentarão 13 deuses. Serão este humanos capazes de colidir com as poderosas divindades?</p>
+                    <div class="alert alert-warning configAlert" role="alert">
+                     <i class="bi bi-exclamation-triangle-fill"></i>  Não recomendado para menores de 16
+                    </div>
+                    <p>Plataformas para ler: MangáLivre</p>
                 </div>
             </div>
         </div>
