Ícones adicionados em todas as páginas & correção na identação

--- a/esporte.html
+++ b/esporte.html
@@ -73,9 +73,6 @@
     <!--Início navbar-->
     <nav class="navbar navbar-expand-lg bg-primary mb-3">
         <div class="container-fluid">
-            <h3>
-                <i class="bi bi-book-half icones"></i>
-            </h3>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -84,11 +81,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item rounded-3 mx-3 navButtons">
-                        <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">
+                            <i class="bi bi-house-fill icones"></i>
+                            Home
+                        </a>
                     </li>
                     <li class="nav-item dropdown me-3 rounded-3 navButtons">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
+                            <i class="bi bi-list"></i>
                             Categorias
                         </a>
                         <ul class="dropdown-menu dropdown-menu-dark">
@@ -98,10 +99,13 @@
                         </ul>
                     </li>
                     <li class="nav-item rounded-3 me-3 navButtons">
-                        <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
+                        <a class="nav-link" aria-current="page" href="contato.html">
+                            <i class="bi bi-send-fill icones"></i>
+                            Cadastro
+                        </a>
                     </li>
                     <li class="nav-item dropdown rounded-3 me-3 navButtons">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Plataformas
                         </a>
