--- a/contato.html
+++ b/contato.html
@@ -1,141 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-	<title>Contato</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<style type="text/css">
-            body{
-                background-image: url("Imagens/bgBodyMangaPedia.jpg");
-                background-attachment: fixed;
-                background-repeat: no-repeat;
-                background-size: cover;
-            }
-            
-            .icones{
-                color: darkblue;
-            }
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <title>Contato</title>
 
-            .navButtons:hover{
-                background-image: linear-gradient(to bottom, #0783E8, #055EA6);
-            }
+    <style type="text/css">
+        body {
+            background-image: url("Imagens/bgBodyMangaPedia.jpg");
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
 
-            .cont-Bv{
-                background-color: ghostwhite;
-            }
+        .icones {
+            color: darkblue;
+        }
 
-        </style>
+        .navButtons:hover {
+            background-image: linear-gradient(to bottom, #0783E8, #055EA6);
+        }
+
+        .cont-Bv {
+            background-color: ghostwhite;
+        }
+    </style>
 </head>
+
 <body>
-	<!--Início navbar-->
-        <nav class="navbar navbar-expand-lg bg-primary mb-3">
-            <div class="container-fluid">
-                    <i class="bi bi-book-half icones"></i>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item rounded-3 mx-3 navButtons">
-                                <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">Home</a>
-                            </li>
-                            <li class="nav-item dropdown me-3 rounded-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Categorias
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
-                                    <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
-                                    <li><a class="dropdown-item" href="romance.html">Romance</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item rounded-3 me-3 navButtons">
-                                <a class="nav-link" aria-current="page" href="contato.html">Contato</a>
-                            </li>
-                            <li class="nav-item dropdown rounded-3 me-3 navButtons">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Plataformas
-                                </a>
-                                <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a></li>
-                                </ul>
+    <!--Início navbar-->
+    <nav class="navbar navbar-expand-lg bg-primary mb-3">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item rounded-3 mx-3 navButtons">
+                        <a class="nav-link active" aria-current="page" href="Index_mangapedia.html">
+                            <i class="bi bi-house-fill icones"></i>
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown me-3 rounded-3 navButtons">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="bi bi-list"></i>
+                            Categorias
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="acao.html">Ação e aventura</a></li>
+                            <li><a class="dropdown-item" href="esporte.html">Esporte</a></li>
+                            <li><a class="dropdown-item" href="romance.html">Romance</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item rounded-3 me-3 navButtons">
+                        <a class="nav-link" aria-current="page" href="contato.html">
+                            <i class="bi bi-send-fill icones"></i>
+                            Cadastro
+                        </a>
+                    </li>
+                    <li class="nav-item dropdown rounded-3 me-3 navButtons">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Plataformas
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="https://mangalivre.net/" target="_blank">MangaLivre</a>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                            <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
-                        </form>
-                    </div>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
+                </form>
             </div>
-        </nav>
+        </div>
+    </nav>
     <!--Fim navbar-->
 
-	<!--Inicio container forms -->
-        <div class="container cont-Bv p-3">
-        	<h1 class="display-6">
-        		<i class="bi bi-send"></i>
-                Contato
-        	</h1>
-        	<p class="lead">Entre em contato conosco:</p>
-        	<form class="needs-validation" novalidate>
-        		<div class="row m-2 form-floating">
-                    <input type="text" class="form-control" placeholder="Insira seu nome" required>
-        			<label class="form-label">Nome:</label><br>
-                    <div class="invalid-feedback">Campo obrigatório.</div>
-        		</div>
+    <!--Inicio container forms -->
+    <div class="container cont-Bv p-3 rounded-3">
+        <h1 class="display-6">
+            <i class="bi bi-send"></i>
+            Cadastro
+        </h1>
+        <p class="lead">Cadastre-se para receber novidades quentinhas do mundo dos mangás:</p>
+        <form class="needs-validation" novalidate>
+            <div class="row m-2 form-floating">
+                <input type="text" class="form-control" required>
+                <label class="form-label">Nome:</label><br>
+                <div class="invalid-feedback">Campo obrigatório.</div>
+            </div>
 
-        		<div class="row m-2 form-floating">
-                    <input type="email" class="form-control" placeholder="Insira seu email" required>
-        			<label class="form-label">Email:</label><br>
-                    <div class="invalid-feedback">Campo obrigatório.</div>
-        		</div>
+            <div class="row m-2 form-floating">
+                <input type="email" class="form-control" required>
+                <label class="form-label">Email:</label><br>
+                <div class="invalid-feedback">Campo obrigatório.</div>
+            </div>
 
-        		<div class="row m-2 form-floating">
-                    <textarea class="form-control" required></textarea>
-                    <label class="form-label">Mensagem:</label>
-                    <div class="invalid-feedback">Campo obrigatório.</div>
-                </div>
+            <div class="row m-2 form-floating">
+                <textarea class="form-control" required></textarea>
+                <label class="form-label">Mensagem:</label>
+                <div class="invalid-feedback">Campo obrigatório.</div>
+            </div>
 
-                <div class="row m-1">
-                    <div class="col-12 m-2">    
-                        <!--Início Button Trigger Modal-->
-                        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#enviarConfirm">
-                            <i class="bi bi-send"></i>
-                            Enviar
-                        </button>
-                        <!--Fim Button Trigger Modal-->
+            <div class="row m-1">
+                <div class="col-12 m-2">
+                    <!--Início Button Trigger Modal-->
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#enviarConfirm">
+                        <i class="bi bi-send"></i>
+                        Enviar
+                    </button>
+                    <!--Fim Button Trigger Modal-->
 
-                        <!--Início Modal-->
-                        <div class="modal fade" id="enviarConfirm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5" id="exampleModalLabel">O sistema informa</h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        Você tem certeza que deseja enviar?
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
-                                        <button type="submit" class="btn btn-primary">Sim</button>
-                                    </div>
+                    <!--Início Modal-->
+                    <div class="modal fade" id="enviarConfirm" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-3" id="exampleModalLabel">O sistema informa</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    Você tem certeza que deseja enviar?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Não</button>
+                                    <button type="submit" class="btn btn-primary">Sim</button>
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-danger">
-                            <i class="bi bi-x-circle"></i>
-                            Limpar
-                        </button>
                     </div>
+                    <button type="submit" class="btn btn-danger">
+                        <i class="bi bi-x-circle"></i>
+                        Limpar
+                    </button>
                 </div>
-        	</form>
-        </div>
+            </div>
+        </form>
+    </div>
 
 
 
@@ -143,11 +158,13 @@
 
 
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
-		<script type="text/javascript">
-            // Example starter JavaScript for disabling form submissions if there are invalid fields
-            (() => {
+    <script type="text/javascript">
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
             'use strict'
 
             // Fetch all the forms we want to apply custom Bootstrap validation styles to
@@ -156,15 +173,16 @@
             // Loop over them and prevent submission
             Array.from(forms).forEach(form => {
                 form.addEventListener('submit', event => {
-                if (!form.checkValidity()) {
-                    event.preventDefault()
-                    event.stopPropagation()
-                }
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
 
-                form.classList.add('was-validated')
+                    form.classList.add('was-validated')
                 }, false)
             })
-            })()
-        </script>
+        })()
+    </script>
 </body>
+
 </html>
